--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,34 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar color="danger">
+        <ion-title>
+            Ionic Video Call with Peerjs
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+    <ion-grid>
+        <ion-row>
+            <video #myVideo></video>
+        </ion-row>
+        <ion-row>
+            <ion-col col-8>
+                <ion-list>
+
+                    <ion-item>
+                        <ion-input type="text" placeholder="enter ID to connecting..." [(ngModel)]="anotherID"></ion-input>
+                    </ion-item>
+                </ion-list>
+
+            </ion-col>
+            <ion-col col-4>
+                <button ion-button primary (click)="connect()">connect</button>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-12>
+                <button ion-button primary (click)="startVideoCall()">start video call</button>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
